Button dark mode fixed & flikker issues fixed

--- a/assets/style/dark-mode.scss
+++ b/assets/style/dark-mode.scss
@@ -64,11 +64,13 @@
   }
 
   section.controller ul select {
+    background: transparent;
     border-color: rgb(140, 130, 115);
   }
 
   .functional-btn .btn-function {
-    background-color: rgb(24, 26, 27);
+    // background-color: rgb(24, 26, 27);
+    background-color: #121212;
     border-color: rgb(140, 130, 115);
     color: rgb(232, 230, 227);
   }
