--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -137,6 +137,10 @@ section.counter {
   }
 }
 
+section.counter:active {
+  background-color: none;
+}
+
 .keyboard {
   color: brown;
   font-weight: bold;
